--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,9 @@
     "require": {
         "php": "^5.6 || ^7.0",
         "zendframework/zendframework": "^2.5",
-        "doctrine/doctrine-orm-module": "^0.10",
-        "neilime/zf2-twb-bundle": "~2.6",
-        "rwoverdijk/assetmanager": "~1.5"
+        "doctrine/doctrine-orm-module": "^0.11",
+        "neilime/zf2-twb-bundle": "^2.6",
+        "rwoverdijk/assetmanager": "^1.6"
     },
     "require-dev": {
         "cgm/zf2-file-upload-examples": "~1"
