--- a/bower.json
+++ b/bower.json
@@ -51,11 +51,12 @@
     "ionrangeslider": "~2.1.2",
     "angular-bootstrap": "~1.3.3",
     "angular-animate": "~1.4.8",
-    "textAngular": "~1.4.6",
     "angular-xeditable": "~0.1.9",
     "ng-js-tree": "~0.0.7",
     "toastr": "^2.1.2",
-    "textAngular": "1.5.12"
+    "textAngular": "1.5.12",
+    "angular-tree-dnd": "^3.0.4",
+    "angular-ui-select": "^0.19.5"
   },
   "overrides": {
     "amcharts": {
@@ -68,24 +69,12 @@
         "./dist/amcharts/gantt.js"
       ]
     },
-    "amcharts-stock": {
-      "main": "./dist/amcharts/amstock.js"
-    },
-    "ammap": {
-      "main": [
-        "./dist/ammap/ammap.js",
-        "./dist/ammap/maps/js/worldLow.js"
-      ]
-    },
     "bootstrap": {
       "main": [
         "dist/css/bootstrap.css",
         "js/dropdown.js",
         "./dist/fonts/**.*"
       ]
-    },
-    "slimScroll": {
-      "main": "./jquery.slimscroll.js"
     },
     "font-awesome": {
       "main": [
