--- a/bower.json
+++ b/bower.json
@@ -50,7 +50,7 @@
     "angular-morris-chart": "~1.1.0",
     "ionrangeslider": "~2.1.2",
     "angular-bootstrap": "~1.3.3",
-    "angular-animate": "~1.4.8",
+    "angular-animate": "^1.4.8",
     "angular-xeditable": "~0.1.9",
     "ng-js-tree": "~0.0.7",
     "toastr": "^2.1.2",
