--- a/bower.json
+++ b/bower.json
@@ -50,13 +50,16 @@
     "angular-morris-chart": "~1.1.0",
     "ionrangeslider": "~2.1.2",
     "angular-bootstrap": "~1.3.3",
-    "angular-animate": "^1.4.8",
+    "angular-animate": "~1.5",
     "angular-xeditable": "~0.1.9",
     "ng-js-tree": "~0.0.7",
     "toastr": "^2.1.2",
     "textAngular": "1.5.12",
     "angular-tree-dnd": "^3.0.4",
-    "angular-ui-select": "^0.19.5"
+    "angular-ui-select": "^0.19.5",
+    "bootstrap3-typeahead": "^4.0.2",
+    "angular-bootstrap3-typeahead": "*",
+    "cropper": "^2.3.4"
   },
   "overrides": {
     "amcharts": {
