--- a/bower.json
+++ b/bower.json
@@ -32,7 +32,7 @@
     "bootstrap-select": "~1.9.3",
     "bootstrap-switch": "~3.3.2",
     "bootstrap-tagsinput": "~0.5.0",
-    "font-awesome": "fontawesome#~4.4.0",
+    "font-awesome": "^4.7.0",
     "fullcalendar": "~2.4.0",
     "highlight": "~8.8.0",
     "jquery": "~2.1.4",
@@ -59,7 +59,8 @@
     "angular-ui-select": "^0.19.5",
     "bootstrap3-typeahead": "^4.0.2",
     "angular-bootstrap3-typeahead": "*",
-    "cropper": "^2.3.4"
+    "cropper": "^2.3.4",
+    "ng-idle": "^1.3.2"
   },
   "overrides": {
     "amcharts": {
