--- a/bower.json
+++ b/bower.json
@@ -14,13 +14,15 @@
     "test",
     "tests"
   ],
+  "resolutions": {
+    "angular": "~1.5.11"
+  },
   "dependencies": {
     "Chart.js": "~1.0.2",
     "Ionicons": "ionicons#~2.0.1",
     "amcharts": "~3.15.2",
     "amcharts-stock": "*",
     "ammap": "~3.14.5",
-    "angular": "~1.4.8",
     "angular-route": "~1.4.6",
     "angular-slimscroll": "~1.1.5",
     "angular-smart-table": "~2.1.3",
@@ -52,7 +54,6 @@
     "angular-bootstrap": "~1.3.3",
     "angular-animate": "~1.5",
     "angular-xeditable": "~0.1.9",
-    "ng-js-tree": "~0.0.7",
     "toastr": "^2.1.2",
     "textAngular": "1.5.12",
     "angular-tree-dnd": "^3.0.4",
@@ -60,7 +61,8 @@
     "bootstrap3-typeahead": "^4.0.2",
     "angular-bootstrap3-typeahead": "*",
     "cropper": "^2.3.4",
-    "ng-idle": "^1.3.2"
+    "ng-idle": "^1.3.2",
+    "tiff": "https://github.com/seikichi/tiff.js.git"
   },
   "overrides": {
     "amcharts": {
